case study solution and tech stack

--- a/index.html
+++ b/index.html
@@ -771,17 +771,410 @@
           </div>
         </div>
 
-        <article id="case-article" class="h-screen">
-          <aside class="sticky top-[20%]">
-            <div class="relative">
-              <h4 class="pl-3 font-bold text-lg">CONTENTS</h4>
-              <div
-                class="absolute top-1/2 -translate-y-1/2 left-0 w-0.5 h-5 border border-blue-500 bg-blue-500"
-              ></div>
+        <!-- case study article -->
+        <article id="case-article" class="h-auto flex gap-20">
+          <aside>
+            <div class="sticky top-[15%]">
+              <div class="relative">
+                <h4 class="pl-3 font-bold text-lg">CONTENTS</h4>
+                <div
+                  class="absolute top-1/2 -translate-y-1/2 left-0 w-0.5 h-5 border border-blue-500 bg-blue-500"
+                ></div>
+              </div>
+
+              <!-- case study article links -->
+              <div class="mt-10 flex flex-col gap-5">
+                <div class="text-md">
+                  <a href="#case-problem" class="flex items-center gap-2"
+                    ><svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="20"
+                      height="20"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="lucide lucide-circle-alert-icon lucide-circle-alert"
+                    >
+                      <circle cx="12" cy="12" r="10" />
+                      <line x1="12" x2="12" y1="8" y2="12" />
+                      <line x1="12" x2="12.01" y1="16" y2="16" /></svg
+                    ><span>The Problem</span></a
+                  >
+                </div>
+
+                <div class="text-md">
+                  <a href="#case-role" class="flex items-center gap-2"
+                    ><svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="20"
+                      height="20"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="lucide lucide-user-icon lucide-user"
+                    >
+                      <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2" />
+                      <circle cx="12" cy="7" r="4" /></svg
+                    ><span>My Role</span></a
+                  >
+                </div>
+
+                <div class="text-md">
+                  <a href="#case-flow" class="flex items-center gap-2"
+                    ><svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="20"
+                      height="20"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="lucide lucide-workflow-icon lucide-workflow"
+                    >
+                      <rect width="8" height="8" x="3" y="3" rx="2" />
+                      <path d="M7 11v4a2 2 0 0 0 2 2h4" />
+                      <rect width="8" height="8" x="13" y="13" rx="2" /></svg
+                    ><span>Flow</span></a
+                  >
+                </div>
+
+                <div class="text-md">
+                  <a href="#case-stack" class="flex items-center gap-2"
+                    ><svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="20"
+                      height="20"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="lucide lucide-code-icon lucide-code"
+                    >
+                      <path d="m16 18 6-6-6-6" />
+                      <path d="m8 6-6 6 6 6" /></svg
+                    ><span>Tech Stack</span></a
+                  >
+                </div>
+
+                <div class="text-md">
+                  <a href="#case-outcome" class="flex items-center gap-2"
+                    ><svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="20"
+                      height="20"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="lucide lucide-trending-up-icon lucide-trending-up"
+                    >
+                      <path d="M16 7h6v6" />
+                      <path d="m22 7-8.5 8.5-5-5L2 17" /></svg
+                    ><span>Outcome</span></a
+                  >
+                </div>
+              </div>
             </div>
           </aside>
 
-          <div class="h-screen"></div>
+          <!-- case study article--right -->
+          <div class="flex-1 space-y-20">
+            <!-- The problem -->
+            <div id="case-problem">
+              <div
+                class="bg-(--color-background-secondary) p-20 rounded-2xl shadow-lg flex flex-col gap-5"
+              >
+                <div class="relative">
+                  <h3 class="pl-3 font-bold text-3xl">The Problem</h3>
+                  <div
+                    class="absolute top-1/2 -translate-y-1/2 left-0 w-1 h-5 border border-blue-500 bg-blue-500"
+                  ></div>
+                </div>
+
+                <p class="text-xl">
+                  The Client struggled with converting their strong visual
+                  identity into a smooth and engaging online shopping
+                  experience. Users encountered friction across pages on the
+                  previous site, which affected engagement and overall
+                  conversion. The previous architecture made iteration painful
+                  and slow.
+                </p>
+
+                <p class="text-xl">
+                  The objective was to create a modern ecommerce experience that
+                  balanced aesthetics with usability. Improving navigation flow,
+                  mobile responsiveness, and performance, while establishing a
+                  frontend foundation that supports scalability and future
+                  growth.
+                </p>
+
+                <div class="flex items-center gap-5 text-2xl">
+                  <div
+                    class="flex-1 flex items-center gap-2 bg-(--color-background) px-10 py-5 border border-red-400 rounded-2xl"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="red"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="lucide lucide-clock-alert-icon lucide-clock-alert"
+                    >
+                      <path d="M12 6v6l4 2" />
+                      <path d="M20 12v5" />
+                      <path d="M20 21h.01" />
+                      <path d="M21.25 8.2A10 10 0 1 0 16 21.16" />
+                    </svg>
+                    <p>Slow Performance</p>
+                  </div>
+
+                  <div
+                    class="flex-1 flex items-center gap-2 bg-(--color-background) px-10 py-5 border border-red-400 rounded-2xl"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="red"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="lucide lucide-smartphone-icon lucide-smartphone"
+                    >
+                      <rect width="14" height="20" x="5" y="2" rx="2" ry="2" />
+                      <path d="M12 18h.01" />
+                    </svg>
+                    <p>Poor UX</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- My Role -->
+            <div id="case-role" class="flex justify-center items-center">
+              <div class="space-y-10 w-[75%]">
+                <h3 class="font-bold text-3xl">My Role & Responsibilities</h3>
+
+                <p class="text-xl">
+                  As the Fullstack Engineer, I managed both frontend and backend
+                  development, building the architecture from the ground up to
+                  deployment. I implemented responsive interfaces while also
+                  handling data flow, API integration, and server-side logic to
+                  deliver a seamless user experience.
+                </p>
+
+                <div class="space-y-5">
+                  <div class="flex gap-2 items-center">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="blue"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="lucide lucide-circle-check-icon lucide-circle-check"
+                    >
+                      <circle cx="12" cy="12" r="10" />
+                      <path d="m9 12 2 2 4-4" />
+                    </svg>
+                    <p class="text-lg">
+                      Designing and building the fullstack architecture for
+                      scalable e-commerce functionality
+                    </p>
+                  </div>
+
+                  <div class="flex gap-2 items-center">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="blue"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="lucide lucide-circle-check-icon lucide-circle-check"
+                    >
+                      <circle cx="12" cy="12" r="10" />
+                      <path d="m9 12 2 2 4-4" />
+                    </svg>
+                    <p class="text-lg">
+                      Developing responsive, reusable React components with
+                      Tailwind CSS
+                    </p>
+                  </div>
+
+                  <div class="flex gap-2 items-center">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="blue"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="lucide lucide-circle-check-icon lucide-circle-check"
+                    >
+                      <circle cx="12" cy="12" r="10" />
+                      <path d="m9 12 2 2 4-4" />
+                    </svg>
+                    <p class="text-lg">
+                      Integrating APIs and managing data flow for dynamic
+                      product listings and user interactions
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div
+                class="card w-1/2 -rotate-2 hover:rotate-0 transition-transform ease-in"
+              >
+                <img src="./images/code3.webp" alt="" />
+              </div>
+            </div>
+
+            <!-- Solution -->
+            <div id="case-flow" class="space-y-10">
+              <h3 class="pl-3 font-bold text-3xl">Solution Architecture</h3>
+
+              <div
+                class="bg-(--color-background-secondary) p-10 rounded-2xl space-y-5"
+              >
+                <div class="text-2xl flex gap-2 items-center">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="lucide lucide-check-icon lucide-check"
+                  >
+                    <path d="M20 6 9 17l-5-5" />
+                  </svg>
+                  <span>Frontend Refactor & Responsive Design</span>
+                </div>
+                <p class="text-lg text-(--color-text-secondary)">
+                  To address mobile friction and inconsistent layouts, the
+                  frontend was rebuilt with React and Tailwind CSS. Components
+                  were made reusable and fully responsive, ensuring smooth
+                  product browsing across devices and reducing visual clutter.
+                </p>
+              </div>
+
+              <div
+                class="bg-(--color-background-secondary) p-10 rounded-2xl space-y-5"
+              >
+                <div class="text-2xl flex gap-2 items-center">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="lucide lucide-check-icon lucide-check"
+                  >
+                    <path d="M20 6 9 17l-5-5" />
+                  </svg>
+                  <span>API Integration & Data Management</span>
+                </div>
+                <p class="text-lg text-(--color-text-secondary)">
+                  The backend previously limited dynamic content delivery. By
+                  integrating a modular API layer, product data, orders, and
+                  user interactions were efficiently fetched and rendered,
+                  reducing load times and improving Core Web Vitals.
+                </p>
+              </div>
+
+              <div
+                class="bg-(--color-background-secondary) p-10 rounded-2xl space-y-5"
+              >
+                <div class="text-2xl flex gap-2 items-center">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="lucide lucide-check-icon lucide-check"
+                  >
+                    <path d="M20 6 9 17l-5-5" />
+                  </svg>
+                  <span>Payment Gateway Integration (Paystack)</span>
+                </div>
+                <p class="text-lg text-(--color-text-secondary)">
+                  To streamline checkout, the Paystack payment gateway was
+                  implemented. This enabled secure, real-time transaction
+                  processing, simplified frontend handling of payments, and
+                  ensured a seamless end-to-end shopping experience.
+                </p>
+              </div>
+            </div>
+
+            <!-- tech flow -->
+            <div id="case-stack">
+              <div>
+                <h3 class="font-bold text-3xl">Technical Decision</h3>
+                <p class="text-xl text-(--color-text-secondary)">
+                  Why I used React Context + useState + localStorage sync to
+                  manage the shopping cart across the app.
+                </p>
+              </div>
+
+              <div class="no-scrollbar overflow-scroll w-full h-125">
+                <img src="./images/carbon.webp" alt="" class="w-full" />
+              </div>
+
+              <p class="pt-10 text-xl">
+                This decision centralizes cart state across all components,
+                persists cart data for logged-out users and ensures seemless
+                syncng when user logs in.
+              </p>
+
+              <p class="pt-10 text-xl">
+                End-to-end JavaScript development: Using MongoDB, Express,
+                React, and Node.js allows both the frontend and backend to be
+                built entirely in JavaScript, enabling faster development,
+                easier debugging, and seamless data flow between client and
+                server.
+              </p>
+            </div>
+          </div>
         </article>
       </div>
     </section>
