--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
 
     <!-- ......... CASE STUDY SECTION .............. -->
     <section id="case-study">
-      <div class="mx-40">
+      <div class="mx-10 lg:mx-40">
         <div class="relative flex items-center">
           <div
             class="absolute top-1/2 translate-y-1/2 left-0 w-10 text-blue-500 bg-blue-500 border border-blue-500"
@@ -720,11 +720,15 @@
           <p class="indicator-text px-12 text-blue-500 font-bold">CASE STUDY</p>
         </div>
 
-        <h1 class="text-6xl font-extrabold pt-5">Project Aesthesia:</h1>
-        <h2 class="text-6xl font-extrabold max-w-5xl pb-5">
+        <h1 class="text-3xl md:text-5xl lg:text-6xl font-extrabold pt-5">
+          Project Aesthesia:
+        </h1>
+        <h2
+          class="text-3xl md:text-5xl lg:text-6xl font-extrabold max-w-5xl pb-5"
+        >
           Redefining the Online Shopping Experience
         </h2>
-        <p class="text-2xl text-(--color-text-secondary)">
+        <p class="text-lg md:text-xl lg:text-2xl text-(--color-text-secondary)">
           A modern storefront built to balance visual appeal with a seamless
           shopping experience.
         </p>
@@ -737,43 +741,48 @@
             <img
               src="./images/aesthesia.webp"
               alt=""
-              class="w-[75%] rounded-2xl group-hover:scale-[1.02] transition-transform duration-300 ease-in shadow-lg"
+              class="w-full lg:w-[35%] rounded-2xl group-hover:scale-[1.02] transition-transform duration-300 ease-in shadow-lg"
             />
 
             <div
-              class="absolute bottom-0 left-0 w-full bg-(--color-background) z-50 h-[15%] border-t border-gray-500 flex justify-between items-center px-20"
+              class="absolute bottom-0 left-0 w-full bg-(--color-background) z-50 h-[30%] md:h-[25%] lg:h-[15%] border-t border-gray-500 flex flex-col md:flex-row justify-between items-start md:items-center px-5 md:px-20 gap-3 md:gap-0 py-3 md:py-0"
             >
-              <div>
+              <div class="hidden lg:block">
                 <span class="text-xs font-bold text-(--color-text-secondary)"
                   >ROLE</span
                 >
-                <p class="text-lg">FullStack Engineer</p>
+                <p class="text-sm md:text-lg">FullStack Engineer</p>
               </div>
               <div>
                 <span class="text-xs font-bold text-(--color-text-secondary)"
                   >STACK</span
                 >
-                <p class="text-lg">React, Tailwind, Express, MongoDB</p>
+                <p class="text-sm md:text-lg">
+                  React, Tailwind, Express, MongoDB
+                </p>
               </div>
-              <div>
+              <div class="hidden lg:block">
                 <span class="text-xs font-bold text-(--color-text-secondary)"
                   >DURATION</span
                 >
-                <p class="text-lg">3 Months</p>
+                <p class="text-sm md:text-lg">3 Months</p>
               </div>
-              <div>
+              <div class="hidden lg:block">
                 <span class="text-xs font-bold text-(--color-text-secondary)"
                   >PLATFORM</span
                 >
-                <p class="text-lg">Web</p>
+                <p class="text-sm md:text-lg">Web</p>
               </div>
             </div>
           </div>
         </div>
 
         <!-- case study article -->
-        <article id="case-article" class="h-auto flex gap-20">
-          <aside>
+        <article
+          id="case-article"
+          class="h-auto flex flex-col lg:flex-row gap-10 lg:gap-20"
+        >
+          <aside class="hidden lg:block">
             <div class="sticky top-[15%]">
               <div class="relative">
                 <h4 class="pl-3 font-bold text-lg">CONTENTS</h4>
@@ -894,10 +903,12 @@
             <!-- The problem -->
             <div id="case-problem">
               <div
-                class="bg-(--color-background-secondary) p-20 rounded-2xl shadow-lg flex flex-col gap-5"
+                class="bg-(--color-background-secondary) p-5 md:p-10 lg:p-20 rounded-2xl shadow-lg flex flex-col gap-5"
               >
                 <div class="relative">
-                  <h3 class="pl-3 font-bold text-3xl">The Problem</h3>
+                  <h3 class="pl-3 font-bold text-2xl md:text-3xl">
+                    The Problem
+                  </h3>
                   <div
                     class="absolute top-1/2 -translate-y-1/2 left-0 w-1 h-5 border border-blue-500 bg-blue-500"
                   ></div>
@@ -920,9 +931,11 @@
                   growth.
                 </p>
 
-                <div class="flex items-center gap-5 text-2xl">
+                <div
+                  class="flex flex-col md:flex-row items-center gap-3 md:gap-5 text-lg md:text-2xl"
+                >
                   <div
-                    class="flex-1 flex items-center gap-2 bg-(--color-background) px-10 py-5 border border-red-400 rounded-2xl"
+                    class="flex-1 flex items-center gap-2 bg-(--color-background) px-5 md:px-10 py-3 md:py-5 border border-red-400 rounded-2xl"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -945,7 +958,7 @@
                   </div>
 
                   <div
-                    class="flex-1 flex items-center gap-2 bg-(--color-background) px-10 py-5 border border-red-400 rounded-2xl"
+                    class="flex-1 flex items-center gap-2 bg-(--color-background) px-5 md:px-10 py-3 md:py-5 border border-red-400 rounded-2xl"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -969,9 +982,14 @@
             </div>
 
             <!-- My Role -->
-            <div id="case-role" class="flex justify-center items-center">
-              <div class="space-y-10 w-[75%]">
-                <h3 class="font-bold text-3xl">My Role & Responsibilities</h3>
+            <div
+              id="case-role"
+              class="flex flex-col lg:flex-row justify-center items-center gap-10"
+            >
+              <div class="space-y-10 w-full lg:w-[75%]">
+                <h3 class="font-bold text-2xl md:text-3xl">
+                  My Role & Responsibilities
+                </h3>
 
                 <p class="text-xl">
                   As the Fullstack Engineer, I managed both frontend and backend
@@ -1051,7 +1069,7 @@
               </div>
 
               <div
-                class="card w-1/2 -rotate-2 hover:rotate-0 transition-transform ease-in"
+                class="card w-full lg:w-1/2 -rotate-2 hover:rotate-0 transition-transform ease-in"
               >
                 <img src="./images/code3.webp" alt="" />
               </div>
@@ -1059,7 +1077,9 @@
 
             <!-- Solution -->
             <div id="case-flow" class="space-y-10">
-              <h3 class="pl-3 font-bold text-3xl">Solution Architecture</h3>
+              <h3 class="pl-3 font-bold text-2xl md:text-3xl">
+                Solution Architecture
+              </h3>
 
               <div
                 class="bg-(--color-background-secondary) p-10 rounded-2xl space-y-5"
@@ -1149,14 +1169,20 @@
             <!-- tech flow -->
             <div id="case-stack">
               <div>
-                <h3 class="font-bold text-3xl">Technical Decision</h3>
-                <p class="text-xl text-(--color-text-secondary)">
+                <h3 class="font-bold text-2xl md:text-3xl">
+                  Technical Decision
+                </h3>
+                <p
+                  class="text-base md:text-lg lg:text-xl text-(--color-text-secondary)"
+                >
                   Why I used React Context + useState + localStorage sync to
                   manage the shopping cart across the app.
                 </p>
               </div>
 
-              <div class="no-scrollbar overflow-scroll w-full h-125">
+              <div
+                class="card no-scrollbar overflow-scroll w-full h-80 md:h-100 lg:h-125"
+              >
                 <img src="./images/carbon.webp" alt="" class="w-full" />
               </div>
 
@@ -1173,6 +1199,59 @@
                 easier debugging, and seamless data flow between client and
                 server.
               </p>
+            </div>
+
+            <!-- outcomes -->
+            <div id="case-outcome" class="space-y-10">
+              <h3 class="font-bold text-2xl md:text-3xl">The Outcome</h3>
+
+              <div
+                class="flex flex-col md:flex-row gap-3 md:gap-5 items-stretch"
+              >
+                <div
+                  class="card text-center bg-(--color-background-secondary) p-8 md:p-10 rounded-2xl border border-transparent hover:border-blue-500 transition-all ease-in group space-y-2 w-full md:w-[30%] h-auto md:h-64"
+                >
+                  <p
+                    class="text-(--color-accent) text-5xl md:text-7xl font-bold group-hover:scale-[1.05] transition-transform ease-in"
+                  >
+                    40%
+                  </p>
+                  <p class="text-lg md:text-2xl font-bold">
+                    Increase in conversion
+                  </p>
+                  <p class="text-(--color-text-secondary) text-sm md:text-base">
+                    Mobile users finalized purchases more often
+                  </p>
+                </div>
+
+                <div
+                  class="card text-center bg-(--color-background-secondary) p-8 md:p-10 rounded-2xl border border-transparent hover:border-blue-500 transition-all ease-in group space-y-2 w-full md:w-[30%] h-auto md:h-64"
+                >
+                  <p
+                    class="text-(--color-accent) text-5xl md:text-7xl font-bold group-hover:scale-[1.05] transition-transform ease-in"
+                  >
+                    97
+                  </p>
+                  <p class="text-lg md:text-2xl font-bold">Performance Score</p>
+                  <p class="text-(--color-text-secondary) text-sm md:text-base">
+                    Page speed Score
+                  </p>
+                </div>
+
+                <div
+                  class="card text-center bg-(--color-background-secondary) p-8 md:p-10 rounded-2xl border border-transparent hover:border-blue-500 transition-all ease-in group space-y-2 w-full md:w-[30%] h-auto md:h-64"
+                >
+                  <p
+                    class="text-(--color-accent) text-5xl md:text-7xl font-bold group-hover:scale-[1.05] transition-transform ease-in"
+                  >
+                    1.2s
+                  </p>
+                  <p class="text-lg md:text-2xl font-bold">Load Time</p>
+                  <p class="text-(--color-text-secondary) text-sm md:text-base">
+                    Average time to interactive
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </article>
