--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pharez Oyelade</title>
-    <link href="/output.css" rel="stylesheet" />
+    <link href="output.css" rel="stylesheet" />
     <script src="../script.js"></script>
     <script src="./skills.js"></script>
   </head>
