Update script source paths and cursor visibility

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pharez Oyelade</title>
     <link href="/output.css" rel="stylesheet" />
-    <script src="../script.js"></script>
+    <script src="./script.js"></script>
     <script src="./skills.js"></script>
   </head>
   <body>
-    <div class="cursor"></div>
-    <div class="cursor-follower"></div>
+    <div class="cursor hidden lg:flex"></div>
+    <div class="cursor-follower hidden lg:flex"></div>
 
     <header
       class="fixed top-0 left-0 right-0 flex justify-between items-center px-[5%] py-6 z-50 mix-blend-difference text-white"
