Add contact section with call-to-action

--- a/public/index.html
+++ b/public/index.html
@@ -1258,7 +1258,31 @@
       </div>
     </section>
 
-    <section class="h-screen"></section>
+    <section class="h-screen">
+      <div class="text-center space-y-5">
+        <h1 class="text-4xl font-bold">Have an Idea? <br/> Let's build it.</h1>
+        <p>Ready to turn your concepts into reality? I specialize in building pixel-perfect, accessible web experiences. Reach out and let's start the conversation.</p>
+                <a
+          href="#"
+          class="group relative px-8 py-3.5 bg-(--color-accent) hover:bg-(--color-accent-hover) text-white font-semibold rounded-lg transition-all hover:shadow-[0_0_20px_rgba(37,99,235,0.4)] flex items-center justify-center gap-2"
+        >
+          Contact Me
+          <svg
+            class="w-4 h-4 transition-transform group-hover:translate-x-1"
+            fill="none"
+            stroke="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M17 8l4 4m0 0l-4 4m4-4H3"
+            ></path>
+          </svg>
+                </a>
+      </div>
+    </section>
 
     <script>
       const cursor = document.querySelector(".cursor");
