Change section class for layout adjustments

--- a/public/index.html
+++ b/public/index.html
@@ -1258,8 +1258,8 @@
       </div>
     </section>
 
-    <section class="h-screen">
-      <div class="text-center space-y-5">
+    <section class="py-20 px-40">
+      <div class="text-center space-y-5 w-1/2">
         <h1 class="text-4xl font-bold">Have an Idea? <br/> Let's build it.</h1>
         <p>Ready to turn your concepts into reality? I specialize in building pixel-perfect, accessible web experiences. Reach out and let's start the conversation.</p>
                 <a
