--- a/public/index.html
+++ b/public/index.html
@@ -1259,7 +1259,7 @@
     </section>
 
     <section class="py-20 px-10 lg:px-40">
-      <div class="flex flex-col justify-center items-center text-center space-y-5 w-1/2">
+      <div class="flex flex-col justify-center items-center text-center space-y-5 w-full mx-auto">
         <h1 class="text-4xl font-bold">Have an Idea? <br/> Let's build it.</h1>
         <p>Ready to turn your concepts into reality? I specialize in building pixel-perfect, accessible web experiences. Reach out and let's start the conversation.</p>
                 <a
