--- a/public/index.html
+++ b/public/index.html
@@ -1258,12 +1258,12 @@
       </div>
     </section>
 
-    <section class="py-20 px-10 lg:px-40">
+    <section id="contact" class="py-20 px-10 lg:px-40">
       <div class="flex flex-col justify-center items-center text-center space-y-5 w-full mx-auto">
         <h1 class="text-4xl font-bold">Have an Idea? <br/> Let's build it.</h1>
         <p>Ready to turn your concepts into reality? I specialize in building pixel-perfect, accessible web experiences. Reach out and let's start the conversation.</p>
                 <a
-          href="#"
+          href="mailto:pharezoyelade@gmail.com?subject=Project Inquiry"
           class="group relative px-8 py-3.5 bg-(--color-accent) hover:bg-(--color-accent-hover) text-white font-semibold rounded-lg transition-all hover:shadow-[0_0_20px_rgba(37,99,235,0.4)] flex items-center justify-center gap-2"
         >
           Contact Me
@@ -1283,6 +1283,22 @@
                 </a>
       </div>
     </section>
+
+    <footer class="py-20 border-t border-gray-400">
+      <div class="px-20 lg:px-40 w-full mx-auto text-center space-y-10">
+        <div class="space-y-2">
+          <h1 class="text-3xl font-bold">Pharez</h1>
+          <p class="text-sm text-(--color-text-secondary)">Crafting digital experiences with a focus on performance, interaction, and clean code.</p>
+        </div>
+
+        <div class="flex items-center gap-10">
+          <a href="#home">Home</a>
+          <a href="#about">About</a>
+          <a href="#skills">Skills</a>
+          <a href="#home">Work</a>
+        </div>
+      </div>
+    </footer>
 
     <script>
       const cursor = document.querySelector(".cursor");
