--- a/public/index.html
+++ b/public/index.html
@@ -196,7 +196,8 @@
 
         <div class="flex gap-4">
           <a
-            href="#"
+            href="https://github.com/Pharez-Oyelade"
+            target="_blank"
             class="p-2 rounded-full bg-(--color-card-bg) hover:text-(--color-accent) transition-colors"
             ><svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
               <path
@@ -204,7 +205,8 @@
               /></svg
           ></a>
           <a
-            href="#"
+            href="https://www.linkedin.com/in/pharez-oyelade-b90263312"
+            target="_blank"
             class="p-2 rounded-full bg-(--color-card-bg) hover:text-(--color-accent) transition-colors"
             ><svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
               <path
@@ -212,7 +214,8 @@
               /></svg
           ></a>
           <a
-            href="#"
+            href="https://x.com/Pharez_Oye"
+            target="_blank"
             class="p-2 rounded-full bg-(--color-card-bg) hover:text-(--color-accent) transition-colors"
             ><svg
               class="w-5 h-5"
@@ -1291,11 +1294,48 @@
           <p class="text-sm text-(--color-text-secondary)">Crafting digital experiences with a focus on performance, interaction, and clean code.</p>
         </div>
 
-        <div class="flex items-center gap-10">
+        <div class="flex justify-center items-center gap-5 text-sm">
           <a href="#home">Home</a>
           <a href="#about">About</a>
           <a href="#skills">Skills</a>
           <a href="#home">Work</a>
+        </div>
+
+        <div class="flex gap-4">
+          <a
+            href="https://github.com/Pharez-Oyelade"
+            target="_blank"
+            class="p-2 rounded-full bg-(--color-card-bg) hover:text-(--color-accent) transition-colors"
+            ><svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+              <path
+                d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
+              /></svg
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/pharez-oyelade-b90263312"
+            target="_blank"
+            class="p-2 rounded-full bg-(--color-card-bg) hover:text-(--color-accent) transition-colors"
+            ><svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+              <path
+                d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
+              /></svg
+          ></a>
+          <a
+            href="https://x.com/Pharez_Oye"
+            target="_blank"
+            class="p-2 rounded-full bg-(--color-card-bg) hover:text-(--color-accent) transition-colors"
+            ><svg
+              class="w-5 h-5"
+              fill="currentColor"
+              role="img"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <title>X</title>
+              <path
+                d="M14.234 10.162 22.977 0h-2.072l-7.591 8.824L7.251 0H.258l9.168 13.343L.258 24H2.33l8.016-9.318L16.749 24h6.993zm-2.837 3.299-.929-1.329L3.076 1.56h3.182l5.965 8.532.929 1.329 7.754 11.09h-3.182z"
+              /></svg
+          ></a>
         </div>
       </div>
     </footer>
