Update footer with horizontal rule and copyright
Added a horizontal rule and copyright notice.

--- a/public/index.html
+++ b/public/index.html
@@ -1301,7 +1301,7 @@
           <a href="#home">Work</a>
         </div>
 
-        <div class="flex gap-4">
+        <div class="flex gap-4 justify-center">
           <a
             href="https://github.com/Pharez-Oyelade"
             target="_blank"
@@ -1337,6 +1337,10 @@
               /></svg
           ></a>
         </div>
+
+        <hr/>
+
+        <span class="text-xs text-(--color-text-secondary)">&copy; 2026 Pharez</span>
       </div>
     </footer>
 
