Update header and footer classes in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <div class="cursor-follower hidden lg:flex"></div>
 
     <header
-      class="fixed top-0 left-0 right-0 flex justify-between items-center px-[5%] py-6 z-50 mix-blend-difference text-white"
+      class="fixed top-0 left-0 right-0 flex justify-between items-center px-[5%] py-6 z-50 text-white"
     >
       <h1 class="text-2xl font-bold tracking-tighter">Pharez</h1>
 
@@ -474,7 +474,7 @@
           <p class="indicator-text px-12 text-blue-500 font-bold">PORTFOLIO</p>
         </div>
 
-        <h1 class="text-7xl font-extrabold py-5">Selected Work</h1>
+        <h1 class="text-4xl lg:text-7xl font-extrabold py-5">Selected Work</h1>
 
         <p class="text-xl text-(--color-text-secondary) max-w-150">
           A collection of digital products crafted with
@@ -1287,15 +1287,15 @@
       </div>
     </section>
 
-    <footer class="py-20 border-t border-gray-400">
-      <div class="px-20 lg:px-40 w-full mx-auto text-center space-y-10">
+    <footer class="pt-20 pb-5 border-t border-gray-400">
+      <div class="px-10 lg:px-40 w-full mx-auto text-center space-y-10">
         <div class="space-y-2">
           <h1 class="text-3xl font-bold">Pharez</h1>
           <p class="text-sm text-(--color-text-secondary)">Crafting digital experiences with a focus on performance, interaction, and clean code.</p>
         </div>
 
         <div class="flex justify-center items-center gap-5 text-sm">
-          <a href="#home">Home</a>
+          <a href="#hero">Home</a>
           <a href="#about">About</a>
           <a href="#skills">Skills</a>
           <a href="#home">Work</a>
