--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <div class="cursor-follower hidden lg:flex"></div>
 
     <header
-      class="fixed top-0 left-0 right-0 flex justify-between items-center px-[5%] py-6 z-50 text-white"
+      class="fixed top-0 left-0 right-0 flex justify-between items-center px-[5%] py-6 z-50"
     >
       <h1 class="text-2xl font-bold tracking-tighter">Pharez</h1>
 
