Update text to emphasize responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
         I’m a Frontend Developer specializing in
         <strong class="text-(--color-text-primary)">React</strong> and
         <strong class="text-(--color-text-primary)">Tailwind CSS</strong>. I
-        build accessible, pixel-perfect, and performant web applications that
+        build accessible, responsive, and performant web applications that
         deliver exceptional user experiences.
       </p>
 
@@ -1264,7 +1264,7 @@
     <section id="contact" class="py-20 px-10 lg:px-40">
       <div class="flex flex-col justify-center items-center text-center space-y-5 w-full mx-auto">
         <h1 class="text-4xl font-bold">Have an Idea? <br/> Let's build it.</h1>
-        <p>Ready to turn your concepts into reality? I specialize in building pixel-perfect, accessible web experiences. Reach out and let's start the conversation.</p>
+        <p>Ready to turn your concepts into reality? I specialize in building responsive, accessible web experiences. Reach out and let's start the conversation.</p>
                 <a
           href="mailto:pharezoyelade@gmail.com?subject=Project Inquiry"
           class="group relative px-8 py-3.5 bg-(--color-accent) hover:bg-(--color-accent-hover) text-white font-semibold rounded-lg transition-all hover:shadow-[0_0_20px_rgba(37,99,235,0.4)] flex items-center justify-center gap-2"
