--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pharez Oyelade</title>
-    <link href="/output.css" rel="stylesheet" />
+    <link href="output.css" rel="stylesheet" />
     <script src="./script.js"></script>
     <script src="./skills.js"></script>
   </head>
@@ -495,7 +495,7 @@
                 class="card w-full h-full group-hover:scale-[1.05] transition-transform ease-in"
               />
               <div
-                class="absolute bottom-0 bg-linear-to-t from-white via-20% to-transparent w-full h-1/4 z-50"
+                class="absolute bottom-0 bg-linear-to-t from-white via-20% to-transparent w-full h-1/4 z-20"
               ></div>
             </div>
 
@@ -553,7 +553,7 @@
                 class="card w-full h-full group-hover:scale-[1.05] transition-transform ease-in"
               />
               <div
-                class="absolute bottom-0 bg-linear-to-t from-white via-20% to-transparent w-full h-1/4 z-50"
+                class="absolute bottom-0 bg-linear-to-t from-white via-20% to-transparent w-full h-1/4 z-20"
               ></div>
             </div>
 
@@ -655,7 +655,7 @@
                 class="card w-full h-full group-hover:scale-[1.05] transition-transform ease-in"
               />
               <div
-                class="absolute bottom-0 bg-linear-to-t from-white via-20% to-transparent w-full h-1/4 z-50"
+                class="absolute bottom-0 bg-linear-to-t from-white via-20% to-transparent w-full h-1/4 z-20"
               ></div>
             </div>
 
@@ -748,7 +748,7 @@
             />
 
             <div
-              class="absolute bottom-0 left-0 w-full bg-(--color-background) z-50 h-[30%] md:h-[25%] lg:h-[15%] border-t border-gray-500 flex flex-col md:flex-row justify-between items-start md:items-center px-5 md:px-20 gap-3 md:gap-0 py-3 md:py-0"
+              class="absolute bottom-0 left-0 w-full bg-(--color-background) z-20 h-[30%] md:h-[25%] lg:h-[15%] border-t border-gray-500 flex flex-col md:flex-row justify-between items-start md:items-center px-5 md:px-20 gap-3 md:gap-0 py-3 md:py-0"
             >
               <div class="hidden lg:block">
                 <span class="text-xs font-bold text-(--color-text-secondary)"
@@ -1262,10 +1262,19 @@
     </section>
 
     <section id="contact" class="py-20 px-10 lg:px-40">
-      <div class="flex flex-col justify-center items-center text-center space-y-5 w-full mx-auto">
-        <h1 class="text-4xl font-bold">Have an Idea? <br/> Let's build it.</h1>
-        <p>Ready to turn your concepts into reality? I specialize in building responsive, accessible web experiences. Reach out and let's start the conversation.</p>
-                <a
+      <div
+        class="flex flex-col justify-center items-center text-center space-y-5 w-full mx-auto"
+      >
+        <h1 class="text-4xl font-bold">
+          Have an Idea? <br />
+          Let's build it.
+        </h1>
+        <p>
+          Ready to turn your concepts into reality? I specialize in building
+          responsive, accessible web experiences. Reach out and let's start the
+          conversation.
+        </p>
+        <a
           href="mailto:pharezoyelade@gmail.com?subject=Project Inquiry"
           class="group relative px-8 py-3.5 bg-(--color-accent) hover:bg-(--color-accent-hover) text-white font-semibold rounded-lg transition-all hover:shadow-[0_0_20px_rgba(37,99,235,0.4)] flex items-center justify-center gap-2"
         >
@@ -1283,7 +1292,7 @@
               d="M17 8l4 4m0 0l-4 4m4-4H3"
             ></path>
           </svg>
-                </a>
+        </a>
       </div>
     </section>
 
@@ -1291,7 +1300,10 @@
       <div class="px-10 lg:px-40 w-full mx-auto text-center space-y-10">
         <div class="space-y-2">
           <h1 class="text-3xl font-bold">Pharez</h1>
-          <p class="text-sm text-(--color-text-secondary)">Crafting digital experiences with a focus on performance, interaction, and clean code.</p>
+          <p class="text-sm text-(--color-text-secondary)">
+            Crafting digital experiences with a focus on performance,
+            interaction, and clean code.
+          </p>
         </div>
 
         <div class="flex justify-center items-center gap-5 text-sm">
@@ -1338,9 +1350,11 @@
           ></a>
         </div>
 
-        <hr/>
+        <hr />
 
-        <span class="text-xs text-(--color-text-secondary)">&copy; 2026 Pharez</span>
+        <span class="text-xs text-(--color-text-secondary)"
+          >&copy; 2026 Pharez</span
+        >
       </div>
     </footer>
 
